--- a/styleguide/header.html
+++ b/styleguide/header.html
@@ -26,13 +26,13 @@
     <nav class="unit unit-s-1 unit-m-1 unit-l-2-3">
       <ul class="list-group giga brand-family push-0 nav">
         <li class="list-group-item list-group-item-inline">
-          <a href="#">Home</a>
+          <a href="{{site.baseurl}}/index.html">Home</a>
         </li>
         <li class="list-group-item list-group-item-inline">
-          <a href="#">Dinosaurs</a>
+          <a href="{{site.baseurl}}/dinosaurs.html">Dinosaurs</a>
         </li>
         <li class="list-group-item list-group-item-inline">
-          <a href="#">About</a>
+          <a href="{{site.baseurl}}/about.html">About</a>
         </li>
       </ul>
     </nav>
