--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: Home
+meta: "Covering everything dinosaur-related: links, videos, photos, info."
 ---
 	
 <h1>Dinos 'R' Us</h1>
