--- a/index.html
+++ b/index.html
@@ -2,7 +2,25 @@
 layout: default
 title: Home
 meta: "Covering everything dinosaur-related: links, videos, photos, info."
+showbanner: yes
+bannertext: Dinosaurs Rock!
 ---
 	
 <h1>Dinos 'R' Us</h1>
 <p>Lorem ipsum dolor sit amet, consetetuer adipising elit.</p>
+
+<div class="grid">
+
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		{% include promos-small.html title="Promo 1" desc="Super-duper sale!" image="air-dinos/pteranodon.jpg" %}
+	</div>
+	
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		{% include promos-small.html title="Promo 2" desc="Another great deal!" image="land-dinos/hadrosaur.jpg" %}
+	</div>
+	
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		{% include promos-small.html title="Promo 3" desc="Fantastico" image="land-dinos/stegosaurus.jpg" %}
+	</div>
+	
+</div>
