--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@ bannertext: Dinosaurs Rock!
 <div class="grid">
 
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
-		{% include promos-small.html title="Promo 1" desc="Super-duper sale!" image="air-dinos/pteranodon.jpg" %}
+		{% include promo-small.html title="Promo 1" desc="Super-duper sale!" image="air-dinos/pteranodon.jpg" %}
 	</div>
 	
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
-		{% include promos-small.html title="Promo 2" desc="Another great deal!" image="land-dinos/hadrosaur.jpg" %}
+		{% include promo-small.html title="Promo 2" desc="Another great deal!" image="land-dinos/hadrosaur.jpg" %}
 	</div>
 	
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
-		{% include promos-small.html title="Promo 3" desc="Fantastico" image="land-dinos/stegosaurus.jpg" %}
+		{% include promo-small.html title="Promo 3" desc="Fantastico" image="land-dinos/stegosaurus.jpg" %}
 	</div>
 	
 </div>
