--- a/dinos/index.html
+++ b/dinos/index.html
@@ -14,7 +14,7 @@ meta: All the dinos that have ever existed.
 	
 		<li>
 		<img src="{{site.baseurl}}/images/{{dinos.image}}" alt="">
-		<a href="{{dinos.url}}">{{dinos.name}}</a></li>
+		<a href="{{site.baseurl}}{{dinos.url}}">{{dinos.name}}</a></li>
 
 		{% endif %}
 
